# old_macdonald_orchestrator

./: .gitignore  CMakeLists.txt  sdkconfig.defaults
components/matter_interface/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  linker.lf
main/include/: esp_ot_config.h  event_handler.h  json_request_handler.h  json_response.h  matter_util.h
main/include/commands/: commands.h  matter_commands.h  thread_commands.h  wifi_commands.h
main/include/event_handlers/: chip_event_handler.h  thread_event_handler.h  wifi_event_handler.h
main/include/events/: chip_event_handler.h  event_handler_util.h  thread_event_handler.h  wifi_event_handler.h
main/include/json/: json_inbound_message.h  json_request_handler.h  json_response.h
main/include/messages/: json_outbound_message.h  outbound_message_builder.h
main/include/utils/: event_handler_util.h
main/src/: event_handler.cpp  json_request_handler.cpp  json_response.cpp  matter_util.cpp  orchestrator.cpp
main/src/commands/: commands.cpp  matter_commands.cpp  thread_commands.cpp  wifi_commands.cpp
main/src/event_handlers/: chip_event_handler.cpp  thread_event_handler.cpp  wifi_event_handler.cpp
main/src/events/: chip_event_handler.cpp  event_handler_util.cpp  thread_event_handler.cpp  wifi_event_handler.cpp
main/src/json/: json_inbound_message.cpp  json_outbound_message.cpp  json_request_handler.cpp  json_response.cpp
main/src/messages/: inbound_message_handler.cpp  json_inbound_message.cpp  json_outbound_message.cpp  outbound_message_builder.cpp
main/src/utils/: event_handler_util.cpp
(+33 files in other folders)
